BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Assortment_vod__c.object
<CustomObject>
    <description>Assortment header containing start/end dates, order type, account type, account group and additional header information</description>
    <fields>
        <fullName>Account_Group_vod__c</fullName>
        <description>The Account Group the Assortment is valid for.</description>
        <label>Account Group</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Record_Type_vod__c</fullName>
        <description>The type of Account the Assortment is valid for.
Values need to match the Account Record Type in Account</description>
        <label>Account Record Type</label>
        <picklist>
            <picklistValues>
                <fullName>Pharmacy_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesaler_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>All_Others_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to determine if the Assortment should include a section containing all remaining
products not included in any other section</description>
        <label>All Others</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assortment_Group_vod__c</fullName>
        <description>Used together with sharing settings to limit visibility to specific sets of users
(e.g. country level, role, division, etc.)</description>
        <label>Assortment Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date_vod__c</fullName>
        <description>End date of the validity of the assortment</description>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used for data loads.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Inventory_Monitoring_Record_Type_vod__c</fullName>
        <description>The type of IM the Assortment is valid for.
Values need to match the IM Record Type in Inventory_Monitoring_vod</description>
        <label>Inventory Monitoring Record Type</label>
        <picklist>
            <picklistValues>
                <fullName>Inventory_Monitoring_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order_Record_Type_vod__c</fullName>
        <description>The type of Order the Assortment is valid for.
Values need to match the Order Record Type in Order_vod</description>
        <label>Order Record Type</label>
        <picklist>
            <picklistValues>
                <fullName>Direct_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Bound_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if the Assortment is strict or not.</description>
        <label>Product Bound</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date_vod__c</fullName>
        <description>Start date of the validity of the assortment</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Assortment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assortments</pluralLabel>
    <recordTypes>
        <fullName>IM_Assortment_vod</fullName>
        <active>true</active>
        <description>IM Assortment Header Layout</description>
        <label>IM Assortment</label>
    </recordTypes>
    <recordTypes>
        <fullName>OM_Assortment_vod</fullName>
        <active>true</active>
        <description>Order Assortment header</description>
        <label>OM Assortment</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>EndDate_After_StartDate_vod</fullName>
        <active>true</active>
        <description>Start date after end date</description>
        <errorConditionFormula>IF(AND(NOT(ISNULL(Start_Date_vod__c)),NOT(ISNULL(End_Date_vod__c))), Start_Date_vod__c &gt; End_Date_vod__c,false)</errorConditionFormula>
        <errorMessage>Start date after end date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ProductBound_CannotHave_AllOthers_vod</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Product_Bound_vod__c, All_Others_vod__c)</errorConditionFormula>
        <errorMessage>A Product Bound Assortment cannot have the All Others section displayed</errorMessage>
    </validationRules>
</CustomObject>